--- a/app/drRichie/templates/dashboard/profile.html
+++ b/app/drRichie/templates/dashboard/profile.html
@@ -6,8 +6,53 @@
 
 <div class="header_content">
     <div class="header_title">
-        <h2>Profile</h2>
+        <h2>Edit - Personal Information</h2>
     </div>
+</div>
+<div class="container">
+    <form class="mt-5" action="update/{{ current_user.id }}" method="post">
+       <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">First Name:</label></div>
+                <div class="col-sm-8"><input type="text" value="{{ current_user.first_name}}" name="first_name" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">Last Name:</label></div>
+                <div class="col-sm-8"><input type="text" value="{{ current_user.last_name}}" name="first_name" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">Username:</label></div>
+                <div class="col-sm-8"><input type="text" value="{{ current_user.username}}" name="username" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">Email:</label></div>
+                <div class="col-sm-8"><input type="email" value="{{ current_user.email}}" name="email" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">City:</label></div>
+                <div class="col-sm-8"><input type="text" value="{{ current_user.city}}" name="city" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">Gender:</label></div>
+                <div class="col-sm-8"><input type="text" value="{{ current_user.gender}}" name="gender" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">Height:</label></div>
+                <div class="col-sm-8"><input type="number" value="{{ current_user.height}}" name="height" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-sm-4"><label class="form-label text-info" for="formControlSm">Weight:</label></div>
+                <div class="col-sm-8"><input type="number" value="{{ current_user.weight}}" name="weight" id="formControlSm" class="form-control form-control-sm" /></div>
+            </div>
+            <div class="col-12 ml-5 mt-5">
+                <button class="btn btn-info text-left" type="submit">Update info</button>
+              </div>
+        </div>
+        <div class="col-sm-6"></div>
+       </div>
+    </form>
 </div>
 
 
