--- a/app/drRichie/static/css/style.css
+++ b/app/drRichie/static/css/style.css
@@ -25,6 +25,13 @@ a{
     width: 100%;
     height: 100vh;
     background: hsl(186, 72%, 24%);
+        
+}
+.background_color_r{
+    width: 100%;
+    height: 100vh;
+    background: hsl(186, 72%, 24%);
+    overflow: hidden;
 }
 .login{
     display: flex;
@@ -33,9 +40,18 @@ a{
 }
 
 .wrapper{
-    margin-top: 10rem;
+    margin-top: 8rem;
     width: 350px;
     height: 450px;
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 10px 20px 30px rgba(0,0,0,0.1);
+}
+.wrapper_register{
+    margin-top: 3rem;
+    width: 800px;
+    height: 850px;
     background: #fff;
     padding: 2rem;
     border-radius: 10px;
@@ -79,13 +95,35 @@ fieldset{
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+.register{
+    padding: 5px 2rem;
+    border-radius: 20px;
+    border: 2px solid  hsl(182, 100%, 35%);
+    cursor: pointer;
+    color:#fff;
+    width: 50%;
+    background:  hsl(182, 100%, 35%);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    margin-left: 160px;
+}
+.register:hover{
+    background: hsl(186, 72%, 24%);
+    border: 2px solid  hsl(186, 72%, 24%);
+}
 .submit:hover{
     background: hsl(186, 72%, 24%);
     border: 2px solid  hsl(186, 72%, 24%);
 }
 small{
-    margin-left: 20px;
+    margin-left: 35px;
+    text-align: center;
     margin-top: 1.5rem;
+}
+.account{
+    text-align: center;
+    margin-left: 240px;
 }
 small .btn{
     color: hsl(186, 72%, 24%);
