--- a/app/drRichie/templates/dashboard/dashboard.html
+++ b/app/drRichie/templates/dashboard/dashboard.html
@@ -6,7 +6,89 @@
 
 <div class="header_content">
     <div class="header_title">
-        <h2>Dashboard</h2>
+        <h2>Dashboard - {{ current_user.username }}</h2>
+    </div>
+</div>
+<div>
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-10 mt-3 pt-3">
+                <div class="row z-depth-3">
+                    <div class="col-sm-4 bg-info rounded-left">
+                        <div class="card-block text-center text-white">
+                            <i class="fas fa-user-tie fa-7x mt-5"></i>
+                            <div class="mt-3"><h class="font-weight-bold "> User ID Number: {{ current_user.id }} </h></div>
+                            <a class="text-white" href="{{ url_for('dash.edit') }}"><i class="far fa-edit fa-2x mt-3 mb-2"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 bg-white rounded-right pt-5 pb-5 ml-3">
+                        <h3 class="mt-3 text-center text-dark">Personal Information</h3>
+                        <hr class="bg-primary">
+                        <div class="row">
+                            <div class="col-sm-8 border-right">
+                                <div class="row">
+                                    <div class="col-sm-6 ">
+                                        <p class="font-weight-bold text-info">Firat Name: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.first_name }}</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">Last Name: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.last_name }}</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">Date of Birth: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.birth_data }}</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">Gender: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.gender }}</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">Email: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.email }}</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">City: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.city }}</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">Height: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.height }} Ft</span></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="font-weight-bold text-info">Body Weight: </p>
+                                    </div>
+                                    <div class="col-sm-6"><span>{{ current_user.weight }} KGs</span></div>
+                                </div>
+                            </div>
+                            <!-- <div class="col-sm-6">
+                                <p class="font-weight-bold">Birth Date</p>
+                                <h7 class="text-muted mt-0">{{ current_user.birth_data }}</h7>
+                                <p class="font-weight-bold  mt-3">Weight</p>
+                                <h7 class="text-muted mt-0">{{ current_user.weight }} Kg</h7>
+                            </div> -->
+                        </div>
+                        <div class="row">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
